# GeoPSRO

./: .gitignore  GeoPSRO4D_Codex_Code_Implementation_Instructions.md  GeoPSRO4D_Core_Idea.md  GeoPSRO_METHOD_TRAINING_DETAILS.md  GeoPSRO_PROGRESS.md  README.md  pyproject.toml
configs/: ablation_geometry.yaml  ablation_reward.yaml  eval_dsr.yaml  stage1_vggt_align.yaml  stage2_vggt_sft.yaml  stage3_psro_rft.yaml  vggt_cache.yaml
geopsro4d/: __init__.py
geopsro4d/data/: __init__.py  collator.py  dataset_rft.py  dataset_sft.py  formatters.py  frame_sampler.py  schema.py
geopsro4d/eval/: error_analysis.py  eval_aux.py  eval_dsr.py  eval_geometry_ablation.py  eval_reward_ablation.py
geopsro4d/geometry/: __init__.py  geo_projector.py  geo_resampler.py  geo_tokenizer.py  geometry_gate.py  vggt_cache.py  vggt_extractor.py
geopsro4d/model/: __init__.py  input_builder.py  lora_utils.py  qwen_vggt_wrapper.py
geopsro4d/reward/: __init__.py  answer_parser.py  geobridge_parser.py  process_rules.py  psro_parser.py  reward_fn.py
geopsro4d/train/: common.py  train_stage1_align.py  train_stage2_sft.py  train_stage3_rft.py
geopsro4d/utils/: distributed.py  io.py  logging.py  metrics.py  seed.py
scripts/: run_ablation_geometry.sh  run_ablation_reward.sh  run_eval_dsr.sh  run_stage1_align.sh  run_stage2_sft.sh  run_stage3_rft.sh  run_vggt_cache.sh  smoke_stage1.sh  smoke_stage2.sh  smoke_stage3.sh
tests/: test_frame_sampler.py  test_geometry_adapter.py  test_reward.py  test_schema.py
