[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gap4d"
version = "0.1.0"
description = "gap-4D: geometry-augmented post-training pipeline for 4D spatial reasoning"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "pillow",
  "safetensors",
  "pyyaml",
]

[tool.setuptools.packages.find]
include = ["geopsro4d*"]
